# autonomy_ws

./: .gitignore  .gitmodules  README.md  tatus
src/drift_monitor/: package.xml  setup.cfg  setup.py
src/drift_monitor/drift_monitor/: drift_monitr_node.py
src/go2_web_bridge/: package.xml  setup.cfg  setup.py
src/go2_web_bridge/go2_web_bridge/: go2_web_bridge.py
src/go2_web_bridge/web/: index.html
src/smart_patrol/: package.xml  setup.cfg  setup.py
src/smart_patrol/config/: patrol_config.yaml
src/smart_patrol/launch/: full_patrol_system.launch.py
src/smart_patrol/scripts/: record_waypoints.sh
src/smart_patrol/smart_patrol/: patrol_node.py  waypoint_manager.py  waypoint_recorder.py
src/smart_patrol/waypoints/: default_route.yaml  example.yaml  oficina_ruta1.yaml  recorded_route.yaml
