<?xml version="1.0"?>
<package format="3">
  <name>go2_web_bridge</name>
  <version>0.1.0</version>
  <description>Bridge entre ROS2 y Web (REST + WebSocket) para el robot Unitree Go2</description>
  <maintainer email="unitree@example.com">Unitree</maintainer>
  <license>MIT</license>

  <!-- Dependencias de ROS -->
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Dependencias de Python -->
  <exec_depend>flask</exec_depend>
  <exec_depend>flask_cors</exec_depend>
  <exec_depend>flask_socketio</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

